fix(header): add max-width and text truncation to Header.Userbutton

--- a/@udir-design/react/src/components/header/header.css
+++ b/@udir-design/react/src/components/header/header.css
@@ -165,6 +165,7 @@
     all: unset;
     display: flex;
     width: fit-content;
+    max-width: 16rem;
     flex-shrink: 0;
     align-items: center;
     justify-content: flex-end;
@@ -191,10 +192,19 @@
       display: flex;
       flex-direction: column;
       align-items: flex-end;
+      min-width: 0;
+      .ds-heading,
+      .ds-paragraph {
+        max-width: 100%;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
     }
 
     > svg {
       margin-left: var(--ds-size-1);
+      flex-shrink: 0;
     }
 
     > svg:nth-last-child(2) {
